--- a/game.html
+++ b/game.html
@@ -125,6 +125,14 @@ alert("❌ Need " + price + " coins");
 
 updateUI();
 </script>
-
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.getRegistrations().then(function(registrations) {
+    for(let registration of registrations) {
+      registration.unregister();
+    }
+  });
+}
+</script>
 </body>
 </html>
