--- a/game.html
+++ b/game.html
@@ -2,90 +2,94 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>DarkEarn</title>
+<title>DarkEarn Crypto</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
 <style>
 body {
-margin:0;
-background:radial-gradient(circle at top, #1a0033, #000);
-color:white;
-font-family: 'Segoe UI', sans-serif;
-text-align:center;
-}
-
-.container {
-padding-top:40px;
+    background: radial-gradient(circle at top, #0a0a1a, #000);
+    color: white;
+    font-family: 'Segoe UI', sans-serif;
+    text-align: center;
+    padding-top: 40px;
 }
 
 h1 {
-font-size:28px;
-color:#ff00ff;
-text-shadow:0 0 15px #ff00ff;
+    font-size: 32px;
+    text-shadow: 0 0 15px #00ffff;
 }
 
 #balance {
-font-size:40px;
-margin-top:10px;
-font-weight:bold;
+    font-size: 28px;
+    margin-top: 10px;
+    color: #00ffcc;
 }
 
-#coin {
-font-size:160px;
-margin-top:30px;
-cursor:pointer;
-transition:0.1s;
-filter: drop-shadow(0 0 20px gold);
+.crypto-btn {
+    margin-top: 40px;
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    background: linear-gradient(135deg, #00ffff, #0088ff);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    font-weight: bold;
+    box-shadow: 0 0 40px #00ffff;
+    border: none;
+    transition: 0.1s;
 }
 
-#coin:active {
-transform:scale(0.9);
+.crypto-btn:active {
+    transform: scale(0.9);
+    box-shadow: 0 0 80px #00ffff;
 }
 
 .panel {
-display:flex;
-justify-content:space-around;
-margin-top:30px;
-font-size:16px;
-}
-
-.box {
-background:rgba(255,255,255,0.05);
-padding:10px 20px;
-border-radius:15px;
-box-shadow:0 0 10px #ff00ff;
+    margin-top: 30px;
+    background: rgba(0,0,0,0.6);
+    border: 1px solid #00ffff;
+    border-radius: 12px;
+    padding: 15px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 button {
-margin-top:20px;
-padding:12px 40px;
-font-size:18px;
-border:none;
-border-radius:15px;
-background:linear-gradient(45deg,#ff00ff,#00ffff);
-color:black;
-font-weight:bold;
-cursor:pointer;
-box-shadow:0 0 20px #00ffff;
+    background: black;
+    color: #00ffff;
+    border: 1px solid #00ffff;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 8px;
+    font-size: 14px;
+}
+
+button:hover {
+    background: #00ffff;
+    color: black;
 }
 </style>
 </head>
 
 <body>
-<div class="container">
-<h1>😈 DarkEarn PRO</h1>
 
-<div id="balance">0 💰</div>
+<h1>⚡ DarkEarn Crypto</h1>
+<div id="balance">0 ⚡</div>
 
-<div id="coin">🪙</div>
+<button class="crypto-btn" id="tap">TAP</button>
 
 <div class="panel">
-<div class="box">🚀 Income: <span id="income">1</span></div>
-<div class="box">⚡ Level: <span id="level">1</span></div>
+    <h3>🚀 Upgrades</h3>
+    <button onclick="upgrade()">Level Up (Cost: <span id="price">50</span>)</button>
+    <div>Level: <span id="level">1</span></div>
 </div>
 
-<button onclick="upgrade()">UPGRADE</button>
-
+<div class="panel">
+    <h3>👥 Referral</h3>
+    <div>Your ID: <span id="uid"></span></div>
 </div>
 
 <script>
@@ -98,41 +102,35 @@ coins = parseInt(coins);
 level = parseInt(level);
 
 function updateUI() {
-document.getElementById("balance").innerText = coins + " 💰";
-document.getElementById("income").innerText = level;
-document.getElementById("level").innerText = level;
+    document.getElementById("balance").innerText = coins + " ⚡";
+    document.getElementById("level").innerText = level;
+    document.getElementById("price").innerText = level * 50;
 }
 
-document.getElementById("coin").onclick = () => {
-coins += level;
-localStorage.setItem("coins", coins);
-updateUI();
+document.getElementById("tap").onclick = () => {
+    coins += level;
+    localStorage.setItem("coins", coins);
+    updateUI();
 };
 
 function upgrade() {
-let price = level * 50;
-if (coins >= price) {
-coins -= price;
-level++;
-localStorage.setItem("coins", coins);
-localStorage.setItem("level", level);
-updateUI();
-alert("🔥 Level UP!");
-} else {
-alert("❌ Need " + price + " coins");
+    let price = level * 50;
+    if (coins >= price) {
+        coins -= price;
+        level++;
+        localStorage.setItem("coins", coins);
+        localStorage.setItem("level", level);
+        alert("🔥 Level UP!");
+    } else {
+        alert("❌ Not enough coins");
+    }
+    updateUI();
 }
-}
+
+document.getElementById("uid").innerText = tg.initDataUnsafe?.user?.id || "guest";
 
 updateUI();
 </script>
-<script>
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.getRegistrations().then(function(registrations) {
-    for(let registration of registrations) {
-      registration.unregister();
-    }
-  });
-}
-</script>
+
 </body>
 </html>
