--- a/game.html
+++ b/game.html
@@ -1,9 +1,10 @@
+> Lancet:
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DarkEarn Black Edition</title>
+<title>DarkCoin</title>
 
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
@@ -18,28 +19,52 @@ text-align:center;
 overflow:hidden;
 }
 
-/* Premium background */
-body::before{
-content:"";
+/* TOP BAR */
+.topbar{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+padding:12px;
+background:#000;
+border-bottom:1px solid rgba(255,255,255,0.15);
+font-size:22px;
+font-weight:bold;
+z-index:1000;
+letter-spacing:2px;
+}
+
+/* Animated skull background */
+.skull-bg{
 position:fixed;
 inset:0;
-background:
-radial-gradient(circle at 20% 20%, #ffffff10, transparent),
-radial-gradient(circle at 80% 80%, #ffffff05, transparent);
-z-index:-1;
+z-index:-2;
+overflow:hidden;
+}
+
+.skull{
+position:absolute;
+width:60px;
+opacity:0.08;
+animation:float 20s linear infinite;
+}
+
+@keyframes float{
+from{transform:translateY(120vh) rotate(0deg);}
+to{transform:translateY(-120vh) rotate(360deg);}
 }
 
 /* Glass cards */
 .card{
 background:rgba(255,255,255,0.03);
-backdrop-filter:blur(20px);
+backdrop-filter:blur(18px);
 border:1px solid rgba(255,255,255,0.15);
 border-radius:18px;
 padding:18px;
 margin:12px;
 }
 
-/* Tap button */
+/* TAP button */
 .tap{
 width:100%;
 padding:22px;
@@ -50,12 +75,19 @@ border-radius:14px;
 background:#111;
 color:white;
 border:1px solid white;
-box-shadow:0 0 25px rgba(255,255,255,0.15);
+box-shadow:0 0 30px rgba(255,255,255,0.25);
 transition:0.1s;
+animation:pulse 2s infinite;
 }
 .tap:active{transform:scale(0.95)}
 
-/* Small buttons */
+@keyframes pulse{
+0%{box-shadow:0 0 10px white;}
+50%{box-shadow:0 0 40px white;}
+100%{box-shadow:0 0 10px white;}
+}
+
+/* Buttons */
 .btn{
 padding:10px 16px;
 border-radius:10px;
@@ -65,23 +97,28 @@ color:white;
 margin:5px;
 }
 
-/* Menu */
+/* Bottom menu */
 .menu{
 position:fixed;
-bottom:0;left:0;width:100%;
+bottom:0;
+left:0;
+width:100%;
 display:flex;
 justify-content:space-around;
-background:#050505;
+background:#000;
 padding:8px;
 border-top:1px solid rgba(255,255,255,0.15);
 }
 .menu button{
-background:none;border:none;color:white;font-size:12px;
+background:none;
+border:none;
+color:white;
+font-size:12px;
 }
 
 .hidden{display:none}
 
-/* NFT cards */
+/* NFT */
 .nft{
 border:1px solid white;
 border-radius:14px;
@@ -91,17 +128,24 @@ background:#050505;
 }
 </style>
 </head>
+
 <body>
 
-<h2>BLACK EARN</h2>
+<!-- SKULL BACKGROUND -->
+<div class="skull-bg" id="skulls"></div>
+
+<!-- TOP BAR -->
+<div class="topbar">🪙 DARKCOIN</div>
+
+<br><br><br>
 
 <!-- EARN -->
 <div id="earnTab" class="tab">
 <div class="card">
-<h3>Balance</h3>
+<h3>DarkCoin Balance</h3>
 <h1 id="coins">0</h1>
 <p>⚡ Energy: <span id="energy">100</span>/100</p>
-<button class="tap" onclick="tap()">TAP</button>
+<button class="tap" onclick="tap()">MINE DARKCOIN</button>
 </div>
 </div>
 
@@ -137,8 +181,8 @@ background:#050505;
 <div id="leaderTab" class="tab hidden">
 <div class="card">
 <h3>Leaderboard</h3>
-<p>1 BlackFund — 999999</p>
-<p>2 DarkCrypto — 500000</p>
+<p>1 DarkWhale — 9999999</p>
+<p>2 SkullMiner — 5000000</p>
 <p>3 You — <span id="coins2">0</span></p>
 </div>
 </div>
@@ -158,15 +202,15 @@ background:#050505;
 <h3>NFT Market</h3>
 
 <div class="nft">
-<p>BLACK GENESIS NFT</p>
+<p>💀 Genesis Skull NFT</p>
 <p>Price: 1000</p>
-<button class="btn" onclick="buyNFT('Genesis',1000)">Buy</button>
+<button class="btn" onclick="buyNFT('Genesis Skull',1000)">Buy</button>
 </div>
 
 <div class="nft">
-<p>VOID SKIN NFT</p>
-<p>Price: 2500</p>
-<button class="btn" onclick="buyNFT('Void',2500)">Buy</button>
+<p>☠ Void Skull NFT</p>
+<p>Price: 5000</p>
+<button class="btn" onclick="buyNFT('Void Skull',5000)">Buy</button>
 </div>
 
 <h4>Your NFTs</h4>
@@ -178,6 +222,8 @@ background:#050505;
 <!-- MENU -->
 <div class="menu">
 <button onclick="showTab('earnTab')">Earn</button>
+
+> Lancet:
 <button onclick="showTab('upgradeTab')">Upgrades</button>
 <button onclick="showTab('tasksTab')">Tasks</button>
 <button onclick="showTab('friendsTab')">Friends</button>
@@ -195,27 +241,27 @@ let coins = +localStorage.getItem("coins") || 0;
 let power = +localStorage.getItem("power") || 1;
 let farm = +localStorage.getItem("farm") || 0;
 let energy = +localStorage.getItem("energy") || 100;
-let level = +localStorage.
-
-> Lancet:
-getItem("level") || 1;
-let nfts = JSON.parse(localStorage.getItem("nfts")||"[]");
+let level = +localStorage.getItem("level") || 1;
+let nfts = JSON.parse(localStorage.getItem("nfts") || "[]");
 
 /* Telegram user */
-if(tg.initDataUnsafe.user){
+if(tg.initDataUnsafe?.user){
 username.innerText = "@"+tg.initDataUnsafe.user.username;
 refLink.innerText = "https://t.me/DarkEarnBot?start="+tg.initDataUnsafe.user.id;
 }
 
 /* UI */
 function updateUI(){
+coins2.innerText = coins;
 coinsEl = coins;
-document.getElementById("coins").innerText=coins;
-document.getElementById("coins2").innerText=coins;
-document.getElementById("power").innerText=power;
-document.getElementById("farm").innerText=farm;
-document.getElementById("energy").innerText=energy;
-document.getElementById("level").innerText=level;
+coins2.innerText = coins;
+coinsEl = coins;
+document.getElementById("coins").innerText = coins;
+document.getElementById("coins2").innerText = coins;
+document.getElementById("power").innerText = power;
+document.getElementById("farm").innerText = farm;
+document.getElementById("energy").innerText = energy;
+document.getElementById("level").innerText = level;
 
 localStorage.setItem("coins",coins);
 localStorage.setItem("power",power);
@@ -224,9 +270,8 @@ localStorage.setItem("energy",energy);
 localStorage.setItem("level",level);
 localStorage.setItem("nfts",JSON.stringify(nfts));
 
-/* NFTs */
 myNFTs.innerHTML="";
-nfts.forEach(n=>myNFTs.innerHTML+="<p>"+n+"</p>");
+nfts.forEach(n=>myNFTs.innerHTML+="<p>• "+n+"</p>");
 }
 updateUI();
 
@@ -240,45 +285,31 @@ updateUI();
 }
 
 /* Energy regen */
-setInterval(()=>{
-if(energy<100)energy++;
-},2000);
+setInterval(()=>{ if(energy<100){energy++;updateUI();}},2000);
 
 /* Auto farm */
-setInterval(()=>{
-coins+=farm;
-updateUI();
-},1000);
+setInterval(()=>{ coins+=farm;updateUI();},1000);
 
 /* Upgrades */
-function upgradePower(){
-if(coins>=50){coins-=50;power++;updateUI();}
-}
-function upgradeFarm(){
-if(coins>=200){coins-=200;farm++;updateUI();}
-}
+function upgradePower(){ if(coins>=50){coins-=50;power++;updateUI();}}
+function upgradeFarm(){ if(coins>=200){coins-=200;farm++;updateUI();}}
 
-/* Tasks */
+/* Daily */
 function daily(){
-if(!localStorage.getItem("daily")){
-coins+=500;
-localStorage.setItem("daily",Date.now());
-updateUI();
-alert("Daily claimed");
-}
-}
-function taskReward(){
-coins+=1000;
-updateUI();
+let last=localStorage.getItem("daily");
+if(!last||Date.now()-last>86400000){coins+=1000;localStorage.setItem("daily",Date.now());updateUI();}
 }
 
-/* NFT BUY */
+/* Task */
+function taskReward(){coins+=500;updateUI();}
+
+/* NFT */
 function buyNFT(name,price){
 if(coins>=price){
 coins-=price;
 nfts.push(name);
 updateUI();
-alert("NFT purchased: "+name);
+alert("NFT Minted: "+name);
 }
 }
 
@@ -287,123 +318,18 @@ function showTab(id){
 document.querySelectorAll(".tab").forEach(t=>t.classList.add("hidden"));
 document.getElementById(id).classList.remove("hidden");
 }
-</script><script>
-let tg = window.Telegram.WebApp;
-tg.expand();
 
-/* DATA */
-let coins = +localStorage.getItem("coins") || 0;
-let power = +localStorage.getItem("power") || 1;
-let farm = +localStorage.getItem("farm") || 0;
-let energy = +localStorage.getItem("energy") || 100;
-let level = +localStorage.getItem("level") || 1;
-let nfts = JSON.parse(localStorage.getItem("nfts") || "[]");
-
-/* Telegram user */
-if(tg.initDataUnsafe?.user){
-document.getElementById("username").innerText = "@"+tg.initDataUnsafe.user.username;
-document.getElementById("refLink").innerText = "https://t.me/DarkEarnBot?start="+tg.initDataUnsafe.user.id;
-}
-
-/* UI Update */
-function updateUI(){
-document.getElementById("coins").innerText = coins;
-document.getElementById("coins2").innerText = coins;
-document.getElementById("power").innerText = power;
-document.getElementById("farm").innerText = farm;
-document.getElementById("energy").innerText = energy;
-document.getElementById("level").innerText = level;
-
-localStorage.setItem("coins", coins);
-localStorage.setItem("power", power);
-localStorage.setItem("farm", farm);
-localStorage.setItem("energy", energy);
-localStorage.setItem("level", level);
-localStorage.setItem("nfts", JSON.stringify(nfts));
-
-let nftBox = document.getElementById("myNFTs");
-nftBox.innerHTML = "";
-nfts.forEach(n => nftBox.innerHTML += "<p>• "+n+"</p>");
-}
-updateUI();
-
-/* TAP */
-function tap(){
-if(energy <= 0) return alert("No energy");
-coins += power;
-energy--;
-level = Math.floor(coins / 1000) + 1;
-updateUI();
-}
-
-/* Energy regen */
-setInterval(()=>{
-if(energy < 100){
-energy++;
-updateUI();
-}
-}, 2000);
-
-/* Auto farm */
-setInterval(()=>{
-if(farm > 0){
-coins += farm;
-updateUI();
-}
-}, 1000);
-
-/* Upgrades */
-function upgradePower(){
-if(coins >= 50){
-coins -= 50;
-power++;
-updateUI();
-}else alert("Not enough coins");
-}
-
-function upgradeFarm(){
-if(coins >= 200){
-coins -= 200;
-farm++;
-updateUI();
-}else alert("Not enough coins");
-}
-
-/* Daily reward 24h */
-function daily(){
-let last = localStorage.getItem("daily");
-if(!last || Date.now() - last > 86400000){
-coins += 500;
-localStorage.setItem("daily", Date.now());
-updateUI();
-alert("Daily claimed!");
-}else{
-alert("Come back tomorrow");
-}
-}
-
-/* Task reward */
-function taskReward(){
-coins += 1000;
-updateUI();
-alert("Task completed!");
-}
-
-/* NFT BUY */
-function buyNFT(name, price){
-if(coins >= price){
-coins -= price;
-nfts.push(name);
-updateUI();
-alert("NFT purchased: "+name);
-}else alert("Not enough coins");
-}
-
-/* Tabs */
-function showTab(id){
-document.querySelectorAll(".tab").forEach(t => t.classList.add("hidden"));
-document.getElementById(id).classList.remove("hidden");
+/* Generate floating skulls */
+for(let i=0;i<20;i++){
+let s=document.createElement("img");
+s.src="https://i.imgur.com/8QfQ5xO.png"; // skull png
+s.className="skull";
+s.style.left=Math.random()*100+"%";
+s.style.animationDuration=(10+Math.random()*20)+"s";
+s.style.width=(30+Math.random()*80)+"px";
+document.getElementById("skulls").appendChild(s);
 }
 </script>
+
 </body>
 </html>
